[package]
name = "noreply"
version = "0.1.0"
edition = "2021"

[dependencies]
concoct = { path = "../concoct" }
nostr = "0.16.2"
nostr-sdk = "0.16.0"
skia-safe = "0.58.0"
taffy = "0.2.2"
tokio = { version = "1.24.2", features = ["macros"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
